Implement pagination on the 'GET /repositories' endpoint
We are adding page and size parameters per integration, because we are fetching paginated data from GH, and we cannot fetch the whole data
