# plugins/bulk-import-backend/src/schema/openapi.yaml
@@ -29,6 +29,19 @@ paths:
       security:
         - BearerAuth: []
       tags: [Repository]
+      parameters:
+        - in: query
+          name: pagePerIntegration
+          description: the page number for each Integration
+          schema:
+            type: integer
+            default: 1
+        - in: query
+          name: sizePerIntegration
+          description: the number of items per Integration to return per page
+          schema:
+            type: integer
+            default: 20
       responses:
         200:
           description: Repository list was fetched successfully with no errors
@@ -118,6 +131,12 @@ components:
           type: array
           items:
             type: string
+        #        totalCount:
+        #          type: integer
+        page:
+          type: integer
+        size:
+          type: integer
 
     Repository:
       title: Repository
